add simple gatling test for influxdb